css/style.css
/* commons */
.grey{ color: #a3a3a3; }

.white{ color: white; }

*{ font-family: 'Roboto', sans-serif; }


/* main */

main{ height: calc(100vh - 100px); }

.main-row{height: 100%;}


/* aside */

aside{ width: 60px; height: 100%; background-color: black; overflow: hidden;}

.upper-aside{ height: calc(100% - 75px); }

.lista-playlist{ list-style: none; height: 60%; overflow: auto;}

.lower-aside{ height: 75px; background-color: black; }

#logo{ width: 70%; display: none;}

#logo-small{width: 90%; margin: 0 auto;}

.home{list-style: none; }
.home span{display: none;}
.home::before{content: url(../img/home.svg); display: inline-block; vertical-align: middle; width: 24px; margin-right: 5px;}

.search{list-style: none; }
.search span{display: none;}
.search::before{content: url(../img/search.svg); display: inline-block; vertical-align: middle; width: 24px; margin-right: 5px;}

.library{list-style: none; }
.library span{display: none;}
.library::before{content: url(../img/libreria.svg); display: inline-block; vertical-align: middle; width: 24px; margin-right: 5px;}

.add-playlist{display: none;}

.add-playlist h4{text-transform: uppercase;}

.crea-playlist img {width: 40px; vertical-align: middle; filter: invert(60%);}

.lista-playlist{display: none;}

.installa-app span{display: none;}
.installa-app::before {content: url(../img/download.svg); display: inline-block; vertical-align: middle; width: 14px; margin-right: 5px;}

.profilo p{display: none;}
.profilo{color: white; align-items: center;}
.profilo-img{height: 25px; width: 25px; background-color: grey; border-radius: 100%;}


/* main-section */

.main-section{background-color: #141922;}

.upgrade-bar{height: 100px; filter: opacity(60%); background-color: #080B12; text-decoration: none;}

.scroll-wrapped{height: calc(100vh - 170px); overflow-y: auto; width: 100%;}

.scroll-wrapped nav{height: 70px;}

.btn-upgrade{
    color: white;
    text-decoration: none;
    text-transform: uppercase;
    font-size: 16px;
    border: 2px solid white;
    border-radius: 30px;
}

.scroll-wrapped ul{
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
}

.scroll-wrapped nav li{
    display: inline-block;
    text-transform: uppercase;
    font-size: 12px;
}

.main-content{height: calc(100% - 70px); color: white;}

.main-content .row{ text-align: center;}

.main-content img{width: 100%; display: block;}

.overlay{position: relative; width: 90%; margin: 0 auto;}

.layover-img {
    position: absolute; 
    top: 0;
    background: rgba(0, 0, 0, 0.5);
    color: #f1f1f1; 
    width: 100%;
    height: 100%;
    transition: .5s ease;
    opacity:0;
    color: white;
    font-size: 50px;
    padding: 20px;
    text-align: center;
}

.overlay:hover .layover-img {opacity: 1;}

.main-content h2{font-size: 35px;}
.main-content h4{color: grey;}

.grey{color: grey;}
.white{color: white;}




/* footer */
footer{
    position: fixed;
    bottom: 0;
    left: 0;
    height: 100px;
    width: 100%;
    background-color: #282828;
}

.left-footer{min-width: 250px;}

footer .left-side img{width: 50px;}

.artist{font-size: 18px;}

.right-side{font-size: 15px; color: grey;}

.player{width: 130px;}

.fa-play-circle{font-size: 40px;}

.riproduzione{width: 60%;}

.riproduzione input{color: white;}

.total-play-bar{position: relative; width: 60%; height: 10px; background-color:#424242; border-radius: 5px;}

.play-bar{position: absolute; top: 0; left: 0; width: 30%; height: 10px; background-color:#C0C0C0; border-radius: 5px;}

.right-footer{min-width: 170px;}

input[type="range"] {
    -webkit-appearance: none;
    background-color: #ddd;
    border-radius: 10px;
    height:10px;
    width: 50%;
}

input[type=range]:focus::-ms-fill-lower {
    background: #3071a9;
}
 
input[type="range"]::-webkit-slider-thumb {
    -webkit-appearance: none;
    background-color: #666;
    height: 15px;
    width: 15px;
    border-radius: 100%;
}

@media screen and (min-width:750px) {

    .player{width: 250px;}

    aside{width: 250px;}

    #logo{display: inline-block;}

    #logo-small{display: none;}

    .home span{display: inline;}
    .search span{display: inline;}
    .library span{display: inline;}

    .add-playlist{display: block;}

    .lista-playlist{display: block;}

    .installa-app span{display: inline;}

    .profilo p{display: block;}

    .installa-app{border-bottom: 2px solid grey; font-size: 14px;}
}

